--- a/private_repo_test.html
+++ b/private_repo_test.html
@@ -176,7 +176,7 @@ var div = d3.select("body").append("div")
     .style("opacity", 0)
     .style("z-index", 10000);
 
-d3.csv("data/china-data.csv",function(d, i, columns) {
+d3.csv("https://raw.githubusercontent.com/EthanNelsonDBJ/visualizations/master/china-data.csv?token=APXZM3GMK5EBY52HC5SFC6C65VRMW",function(d, i, columns) {
     d.Date = parseTime(d.Date);
     for (var i = 1, n = columns.length, c; i < n; ++i) d[c = columns[i]] = +d[c];
     return d;
