--- a/stories/ppp/index.html
+++ b/stories/ppp/index.html
@@ -33,8 +33,8 @@
 
 <div id='map'></div>
 
-<script type="text/javascript" src="loan_data.geojson"></script>
-	<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
+<script type="text/javascript" src="zip_data.geojson"></script>
+	<script type="text/javascript" src="https://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
 
 <script type="text/javascript">
 
