--- a/stories/ppp/index.html
+++ b/stories/ppp/index.html
@@ -8,8 +8,6 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
 
@@ -34,17 +32,16 @@
 <div id='map'></div>
 
 <script type="text/javascript" src="zip_data.geojson"></script>
-	<script type="text/javascript" src="https://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
 
 <script type="text/javascript">
 
-
-var layer = new L.StamenTileLayer("terrain");
 var map = new L.Map("map", {
     center: new L.LatLng(39.748488, -104.989899),
     zoom: 9
 });
-map.addLayer(layer);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
 
 	// control that shows state info on hover
 	var info = L.control();
@@ -72,13 +69,13 @@ map.addLayer(layer);
 
 	// get color depending on population density value
 	function getColor(d) {
-		return d > 432 ? '#005824' :
-				d > 360  ? '#238b45' :
-				d > 288  ? '#41ae76' :
-				d > 216  ? '#66c2a4' :
-				d > 72   ? '#99d8c9' :
-				d > 30   ? '#ccece6' :
-				d > 1   ? '#edf8fb' :
+		return d > 350 ? '#005824' :
+				d > 300  ? '#238b45' :
+				d > 250  ? '#41ae76' :
+				d > 200  ? '#66c2a4' :
+				d > 150   ? '#99d8c9' :
+				d > 100   ? '#ccece6' :
+				d > 50   ? '#e5f5f9' :
 							'#f7fcfd';
 	}
 
@@ -134,7 +131,7 @@ map.addLayer(layer);
 		onEachFeature: onEachFeature
 	}).addTo(map);
 
-	map.attributionControl.addAttribution('Income data &copy; <a href="http://census.gov/">U.S. Census</a>, Loan data <a href="https://www.sba.gov/">U.S. Small Business Administration</a>');
+	map.attributionControl.addAttribution('Income data: <a href="http://census.gov/">U.S. Census</a>, Loan data: <a href="https://www.sba.gov/">U.S. Small Business Administration</a>');
 
 
 	var legend = L.control({position: 'bottomright'});
@@ -142,7 +139,7 @@ map.addLayer(layer);
 	legend.onAdd = function (map) {
 
 		var div = L.DomUtil.create('div', 'info legend'),
-			grades = [0, 10, 20, 50, 100, 200, 500, 1000],
+			grades = [0, 50, 100, 150, 200, 250, 300, 350],
 			labels = [],
 			from, to;
 
