--- a/downtown_test/index.html
+++ b/downtown_test/index.html
@@ -8,7 +8,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/scrollama"></script>
-    <link href='../assets/styles.css' rel='stylesheet' />
+    <link href='styles.css' rel='stylesheet' />
 
 </head>
 <body>
