--- a/stories/10222021_vail_resorts/index.html
+++ b/stories/10222021_vail_resorts/index.html
@@ -34,7 +34,7 @@
         </style>
     </head>
     <body>
-        <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script src="https://d3js.org/d3.v3.min.js"></script>
 
         <script type="text/javascript"charset="utf-8">
             d3.text("mtn_directors_year.csv", function(data) {
