--- a/stories/10222021_vail_resorts/index.html
+++ b/stories/10222021_vail_resorts/index.html
@@ -90,7 +90,7 @@
         <div id="container">
             <div id="header-text">
                 <h1>Gender makeup of Vail Resorts board of directors</h1>
-                <p>Since 2013, at least one director on Vail Resorts' board has been a woman, and its current board outdoes most other public companies in the state in terms of board gender diversity. Only five other publicly traded companies headquartered in Colorado have a higher percentage of women on their boards of directors, according to data from the Women's Leadership Council as of June 30, 2021.</p>
+                <p>Since 2010, at least one director on Vail Resorts' board has been a woman, and its current board outdoes most other public companies in the state in terms of board gender diversity. Only five other publicly traded companies headquartered in Colorado have a higher percentage of women on their boards of directors, according to data from the Women's Leadership Council as of June 30, 2021.</p>
             </div>
                     <div class="keyBlock">
             <div class="coachKeys">
@@ -169,7 +169,7 @@
                 var header = d3.select("table").append("thead");
                         header
                             .selectAll("th")
-                            .data(["2009", "2010", "2011", "2012", "2013", "2014", "2015", "2016", "2017", "2018", "2019", "2020", "2021"])
+                            .data(["2009", "2010", "2011", "2012", "2013", "2014", "2015", "2016", "2017", "2018", "2019", "2020"])
                             .enter()
                             .append("th")
                             .text(function(d) {
